<resources>
    <string name="app_name" translatable="false">Maishapay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>
    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="onboarding_page_1_desc">"Ayez une vue d'ensemble de vos ressources financières : compte bancaire, épargne, carte de crédit, PayPal, espèces, etc."</string>
    <string name="onboarding_page_1_title">Toutes vos fiances en un seul endroit</string>
    <string name="onboarding_page_2_desc">Surveillez vos dépenses manuellement ou automatiquement avec un compte en banque connecté.</string>
    <string name="onboarding_page_2_title">Suivez vos dépenses</string>
    <string name="onboarding_page_3_desc">Catégories et graphiques faciles à lire.</string>
    <string name="onboarding_page_3_title">Sachez où va votre argent</string>
    <string name="onboarding_page_4_desc">Obtenez des aperçus réguliers et les conseils d’amélioration.</string>
    <string name="onboarding_page_4_title">Apprenez à gérer vos finances</string>
    <string name="onboarding_page_5_desc">Avec votre famille ou partenaire.</string>
    <string name="onboarding_page_5_title">"Gardons l'oeil sur vos finances ensemble"</string>
    <string name="font_fontFamily_material_item">sans-serif</string>
    <string name="font_sans_serif_condensed">sans-serif-condensed</string>
    <string name="font_sans_serif_light">sans-serif-light</string>
    <string name="font_sans_serif_medium">sans-serif-medium</string>
    <string name="font_sans_serif_normal">sans-serif</string>
    <string name="font_sans_serif_thin">sans-serif-thin</string>
    <string name="website">Website</string>
    <string name="source">Source</string>
    <string name="example_action_button">Done</string>
    <string name="example_action_description">%1$s content would go here. Press the button below to simulate completion.</string>
    <string name="title_sample">Sample</string>
    <string name="description_sample">The welcome screen for this sample app</string>
    <string name="title_default">Default</string>
    <string name="description_default">No custom styles or properties</string>
    <string name="title_light">Light theme</string>
    <string name="description_light">Light background and dark text</string>
    <string name="title_no_skip">No skip</string>
    <string name="description_no_skip">Skipping is disabled</string>
    <string name="title_back_exit">Back button behaviour</string>
    <string name="description_back_exit">Pressing back will exit rather than navigating through pages</string>
    <string name="title_included_pages">Done Image Button</string>
    <string name="description_included_pages">The done button has an image instead of text. Uses STANDARD_DONE_IMAGE bottom layout.</string>
    <string name="title_custom_page">Custom pages</string>
    <string name="description_custom_page">A welcome screen with custom fragments</string>
    <string name="title_button_bar">Log In/Sign Up</string>
    <string name="description_button_bar">Has log in and sign up buttons rather than the standard navigation buttons. Uses BUTTON_BAR bottom layout.</string>
    <string name="title_single_button">Single button</string>
    <string name="description_single_button">Has a single button, rather than the standard navigation buttons. Uses BUTTON_BAR_SINGLE bottom layout.</string>
    <string name="title_indicator_only">Indicator only</string>
    <string name="description_indicator_only">Uses INDICATOR_ONLY bottom layout. No buttons, just the current page indicator.</string>
    <string name="title_previous_button">Previous Button/Action Bar</string>
    <string name="description_previous_button">Shows a previous button on all but the first page. Back button exits.</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_telephone">Téléphone</string>
    <string name="hint_password">Code pin</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_connexion">Connexion</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_forgot_code_pin"><u>Code pin oublié? Cliquez ici.</u></string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Plus encore...</string>
    <string name="e_mail">E-mail</string>
    <string name="sommettre">Soumettre</string>
    <string name="msg_phone_require">Le champs téléphone est obligatoire</string>
    <string name="msg_email_require">Le champs e-mail est obligatoire</string>
    <string name="reessayer">Réessayer</string>
    <string name="annuler">Annuler</string>
    <string name="msg_pin_perdu_success">Vous avez reçu un mail avec votre code PIN</string>
    <string name="parametres">Paramètres</string>
    <string name="msg_network_error">Impossible de se connecter au serveur, veuillez réessayer plutard.</string>
    <string name="msg_pin_perdu_error_0">Les données que vous avez saisies ne sont pas correctes</string>
    <string name="msg_pin_perdu_error_2">Echec d\'envoie E-mail, veuillez reessayer</string>
    <string name="veuillez_patienter">Veuillez patienter…</string>
    <string name="msg_login_error">Les informations entrées ne sont pas correctes, verifiez votre code PIN</string>
    <string name="ask_that_you"><b>Maishapay</b> demande si tu :</string>
    <string name="annuler_2"><u>Annuler</u></string>
    <string name="accepter">Accepter</string>
    <string name="approuves">• Approuves les paiements qui se seront effectués sur <u>ton compte Maishapay</u></string>
    <string name="maishapay_prot_ge_tes_informations_financi_res">Maishapay protège tes informations financières</string>
    <string name="commande">Ta commande</string>
    <string name="nothing"></string>
    <string name="dialog_msg_error">Erreur</string>
    <string name="hello_blank_fragment">This is the main fragment</string>
    <string name="abastecimento">Plein</string>
    <string name="abastecimentos">Pleins</string>
    <string name="acompanhe_historico">"Suivez chronologiquement l'historique des coûts de votre véhicule."</string>
    <string name="add_primeira_despesa">Ajoutez votre première dépense</string>
    <string name="add_primeiro_abastecimento">Ajouter votre premier ravitaillement</string>
    <string name="add_primeiro_combustivel">Ajouter votre premier carburant</string>
    <string name="add_primeiro_lembrete">Ajouter votre premier rappel</string>
    <string name="add_primeiro_local">Ajoutez votre première position</string>
    <string name="add_primeiro_motivo">Donnez votre première impression</string>
    <string name="btn_cancelar">Annuler</string>
    <string name="btn_enviar">Envoyer</string>
    <string name="email">E-mail</string>
    <string name="senha">Code PIN</string>
    <string name="senha_repetir">Répéter le Code PIN</string>
    <string name="telephone">Téléphone</string>
    <string name="code_pin">Code PIN</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
</resources>