<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/LL_Register">

    <include layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1.0">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LinhaFormNome"
                    style="@style/form_linha"
                    android:layout_marginTop="@dimen/form_margem_top">

                    <ImageView
                        style="@style/form_icon_left"
                        app:srcCompat="@drawable/ic_form_nome" />

                    <LinearLayout
                        style="@style/form_linha_divisor"
                        android:layout_weight="1.0">

                        <EditText
                            android:id="@+id/ET_Nome"
                            style="@style/form_edit_text"
                            android:hint="Prénom"
                            android:inputType="textCapWords"
                            android:nextFocusDown="@+id/ET_Sobrenome" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/form_linha_divisor"
                        android:layout_weight="1.0">

                        <EditText
                            android:id="@+id/ET_Sobrenome"
                            style="@style/form_edit_text"
                            android:hint="Nom"
                            android:inputType="textCapWords"
                            android:nextFocusDown="@+id/ET_Phone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinhaFormPhone"
                    style="@style/form_linha">

                    <ImageView
                        style="@style/form_icon_left"
                        app:srcCompat="@drawable/ic_form_phone" />

                    <LinearLayout style="@style/form_linha_divisor">

                        <EditText
                            android:id="@+id/ET_Phone"
                            style="@style/form_edit_text"
                            android:enabled="false"
                            android:hint="@string/telephone"
                            android:inputType="phone"
                            android:nextFocusDown="@+id/ET_Email" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinhaFormEmail"
                    style="@style/form_linha">

                    <ImageView
                        style="@style/form_icon_left"
                        app:srcCompat="@drawable/ic_form_email" />

                    <LinearLayout style="@style/form_linha_divisor">

                        <EditText
                            android:id="@+id/ET_Email"
                            style="@style/form_edit_text"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/ET_Adressse" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinhaFormAdressse"
                    style="@style/form_linha">

                    <ImageView
                        style="@style/form_icon_left"
                        app:srcCompat="@drawable/ic_form_place" />

                    <LinearLayout style="@style/form_linha_divisor">

                        <EditText
                            android:id="@+id/ET_Adressse"
                            style="@style/form_edit_text"
                            android:hint="@string/adresse"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/ET_Ville" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinhaFormAVille"
                    style="@style/form_linha">

                    <ImageView
                        style="@style/form_icon_left"
                        app:srcCompat="@drawable/ic_form_destino" />

                    <LinearLayout style="@style/form_linha_divisor">

                        <EditText
                            android:id="@+id/ET_Ville"
                            style="@style/form_edit_text"
                            android:hint="@string/ville"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/ET_Senha" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/BTN_CriarConta"
                    style="@style/botao_azul_canto_redondo"
                    android:layout_marginBottom="20.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="20.0dip"
                    android:text="Confirmer" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>